# pam-ai

./: README.md  pyproject.toml  variables.yaml
.zplug/: zcompdump
.zplug/cache/: interface
src/stream-transcribe/: whisper-reader.py
src/utils/: yaml_extraction.py
