[tool.poetry]
name = "pam-ai"
version = "0.1.0"
description = ""
authors = ["kahmed <kahmed@netapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper-cpp-python = "^0.2.0"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
